<resources>
    <string name="app_name">MovieReview</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign in to continue</string>
    <string name="user">User name</string>
    <string name="pass">Password</string>
    <string name="passConfirm">Password Confirm</string>
    <string name="forgotpass">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="signup">SignUp</string>
    <string name="singup_title">SignUp</string>
    <string name="singup_slogan">Signup for free</string>
    <string name="name">Name</string>
    <string name="signup_fb">SignUp with Facebook</string>
    <string name="signup_gg">SignUp with Gmail</string>
    <string name="email">Email</string>
    <string name="signin_gg">SignIn with Gmail</string>
    <string name="nav_home">Home</string>
    <string name="nav_fav">Favorite</string>
    <string name="nav_his">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_profile">My Profile</string>
    <string name="nav_chancePass">Change Password</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_playlist">Playlist</string>

    <!--    các chức năng trong setting-->
    <string name="setting">Setting</string>
    <string name="label_setting_darkmode">Dark Mode</string>
    <string name="label_setting_wifi">Use only Wifi</string>
    <string name="label_setting_notification">Notification</string>

    <string name="cd_menu_each_item_recyclerview">Menu for each item</string>
    <string name="release_date">"Release date: "</string>
    <string name="default_title_item_search">3 Body Problem</string>
    <string name="no_data">No data</string>
    <string name="language">"Language: "</string>
    <string name="english">English</string>
    <string name="votes">votes</string>
    <string name="default_vote_item_search">53.8% / 35</string>
    <string name="top_searches">Top searches</string>
    <string name="content_description_button_back">Button back</string>
    <string name="filter">Filter</string>
    <string name="lbl_include_adult">Include Adult</string>
    <string name="lbl_year">Year</string>
    <string name="lbl_genres">Genres</string>
    <string name="text_btn_filter">Filter</string>
    <string name="text_bnt_set_default">Set default</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--gooogle không được đổi-->
    <string name="google_signin_client_id" translatable="false">793964661748-v2eko2imm6pi2dad49oc7ko2gkisgil0.apps.googleusercontent.com</string>
    <!--end gooogle-->

    <!--facebook không được đổi-->
    <string name="facebook_app_id" translatable="false">460102680010973</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb460102680010973</string>
    <string name="facebook_client_token" translatable="false">56789</string>
    <!--end facebook-->

    <!--tag không được đổi-->
    <string name="facebook_tag_name" translatable="false">FACEBOOK</string>
    <string name="google_tag_name" translatable="false">GOOGLE</string>
    <string name="tmdb_movie_tag_name" translatable="false">TMDB_MOVIE</string>
    <string name="tmdb_tv_series_tag_name" translatable="false">TMDB_TV_SERIES</string>
    <string name="youtube_video_tag_name" translatable="false">YOUTUBE</string>
    <!--end tag-->

    <string name="message_error_login">An error occurred during login, please try again</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="view_detail">View detail</string>
    <string name="horizontal_3dots">⋮</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="new_playlist_name">New playlist name</string>
    <string name="new_playlist">New playlist</string>
    <string name="add_to">Add to</string>
    <string name="successfully">successfully</string>
    <string name="failure">failure</string>
    <string name="remove_from">Remove from</string>
    <string name="message_have_some_error">Some errors, please try again later!</string>
    <string name="add_to_playlist_successfully">Add to playlist successfully</string>

    <!--tên folder không được dịch sang ngôn ngữ khác-->
    <string name="folder_image_name">MovieReview</string>
    <!--end tên folder-->
    <string name="day_ago">day ago</string>
    <string name="month_ago">month ago</string>
    <string name="year_ago">year ago</string>
    <string name="username_label">Username</string>
    <string name="email_example_label">example@email.com</string>
    <string name="name_example_label">Developer</string>
    <string name="history_title">History</string>
    <string name="view_all_playlists">See more</string>
    <string name="playlist_title">Playlist</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_name">Change name</string>
    <string name="change_password">Change password</string>
    <string name="views_string">views</string>
    <string name="likes_string">likes</string>
    <string name="show_more_string">Show more</string>
    <string name="hide_less">Hide less</string>

    <string name="name_label">Name:</string>
    <string name="email_label">Email:</string>
    <string name="logout">Logout</string>

    <string name="user_name_label">User Name</string>

    <string name="select_photo">Select photo</string>
    <string name="take_photo">Take a photo</string>

    <string name="toolbar_title">Enter code</string>
    <string name="hint_code">Code</string>
    <string name="confirm_button">Confirm</string>

    <string name="my_list">My List</string>
    <string name="status">"Status: "</string>

    <string name="label_adult">"Adult: "</string>
    <string name="label_overview">Overview</string>
    <string name="label_original_language">Original language:</string>
    <string name="label_spoken_language">Spoken language:</string>
    <string name="label_trailer">Trailer</string>
    <string name="label_crew">Crew</string>
    <string name="label_cast">Cast</string>
    <string name="other_video">Other videos</string>
    <string name="review_other">Review Video</string>

    <string name="your_profile">Your profile</string>

    <string name="channel">Channel</string>

    <string name="label_product_companies">Product companies:</string>
    <string name="label_popularity">Popularity:</string>
    <string name="label_budget">Budget:</string>
    <string name="label_revenue">Revenue:</string>
    <string name="label_homepage">Homepage:</string>

    <string name="title">Title</string>
    <string name="movie">Movie</string>
    <string name="confirm_password">Confirm password</string>
    <string name="new_password">New password</string>
    <string name="reset_password">Reset password</string>

    <string name="new_name">Enter a new name</string>
    <string name="new_email">Enter email</string>
    <string name="save">Save</string>

    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm New Password</string>
    <string name="change_password_button">Change Password</string>
    <string name="go_back_button">Go Back</string>

    <string name="movie_title">Movie Title</string>
    <string name="tag">Tag</string>

    <string name="series">TV Series</string>
    <string name="search">Search</string>

    <string name="rate">Rate</string>
    <string name="views">" views"</string>
    <string name="likes">" likes"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="clear_history_last_hour">Clear history last hour</string>
    <string name="clear_history_last_24_hours">Clear history last 24 hours</string>
    <string name="clear_history_last_7_days">Clear history last 7 days</string>
    <string name="clear_history_last_4_weeks">Clear history last 4 weeks</string>
    <string name="clear_all_history">Clear all history</string>
    <string name="your_history">Your history</string>
    <string name="delete">Delete</string>
    <string name="your_playlists">Your playlists</string>
    <string name="loading">Loading…</string>
    <string name="movie_tag">Movie</string>
    <string name="tv_series_tag">TV Series</string>
    <string name="youtube_tag">Youtube video</string>
</resources>