<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_his"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/nav_his"/>
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/nav_playlist" />

    </group>

    <item android:title="@string/nav_account">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_baseline_account_circle_24"
                android:title="@string/nav_profile" />

            <item
                android:id="@+id/nav_pass"
                android:icon="@drawable/ic_baseline_lock_24"
                android:title="@string/nav_chancePass" />
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_baseline_setting_24"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_baseline_login_24"
                android:title="@string/nav_logout" />

        </menu>
    </item>
</menu>