<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="160dp"
        android:layout_weight="1"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/img_thumbnail_item_rv_actv_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:srcCompat="@drawable/no_img_available" />
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title_item_rv_activity_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color"
            android:fontFamily="@font/montserrat"
            android:layout_marginStart="@dimen/margin_left_info_item_search"
            android:maxLines="3"
            android:ellipsize="end"
            android:textSize="20sp"
            android:text="@string/default_title_item_search" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_info_item_search"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/text_color"
                android:text="@string/release_date" />

            <TextView
                android:id="@+id/tv_date_item_rv_activity_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/no_data"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_info_item_search"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textSize="@dimen/text_size_default"
                android:textColor="@color/text_color"
                android:text="@string/language" />

            <TextView
                android:id="@+id/tv_language_item_rv_activity_search"
                android:layout_width="match_parent"
                android:fontFamily="@font/montserrat"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textColor="@color/text_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_info_item_search"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_rate_item_rv_activity_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/default_vote_item_search"
                android:textColor="@color/text_color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/text_color"
                 android:layout_marginStart="3dp"
                android:text="@string/votes" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/menu_item_rv_activity_search"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/cd_menu_each_item_recyclerview"
            android:src="@drawable/ic_menu_vertical">
        </ImageView>
    </LinearLayout>
</LinearLayout>