<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/text_color"
    android:layout_margin="20dp"
    android:transitionName="layout_trans"
    android:id="@+id/layout_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/logoImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_logo_new"
            android:layout_marginTop="35dp"
            android:transitionName="logo_trans"/>
    </LinearLayout>
    <TextView
        android:id="@+id/txtTitle"
        android:textSize="50sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:transitionName="text_trans"/>
    <TextView
        android:id="@+id/txtDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textSize="20sp"

        android:transitionName="text_trans"/>
    <LinearLayout
        android:id="@+id/linear_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:transitionName="user_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/antic"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:passwordToggleEnabled="true"
            android:transitionName="pass_trans"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:fontFamily="@font/antic" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFogotPass"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/forgotpass"
            android:layout_gravity="end"
            android:elevation="0dp"
            android:fontFamily="@font/antic"
            android:textAlignment="textEnd"
            android:layout_marginBottom="5dp"
            android:transitionName="btn_trans"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:textColor="@color/text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginBottom="5dp"
            android:background="@drawable/custom_btn_login"
            android:fontFamily="@font/antic"
            android:transitionName="btn_trans"
            android:textAllCaps="false"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/antic"
            android:text="@string/or"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="20sp"
            android:transitionName="text_trans"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_btn_login"
            android:textColor="@color/text_color"
            android:fontFamily="@font/antic"
            android:transitionName="btn_trans"
            android:textAllCaps="false"
            android:textSize="20dp" />

        <TextView
            android:layout_marginVertical="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_gravity="center"
            android:fontFamily="@font/antic"
            android:textSize="20sp"
            android:transitionName="or_trans"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingBottom="30dp"
        >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_login_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_facebook_48px"
            android:background="@android:color/transparent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="0dp"
            android:transitionName="btn_trans"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icons8_google_48px"
            android:background="@android:color/transparent"
            android:layout_marginTop="-0dp"
            android:layout_marginLeft="10dp"
            android:transitionName="btn_trans"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>