<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- Mũi tên quay lại -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="8dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:onClick="goBack">
        </ImageView>

        <!-- Tiêu đề -->
        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/change_avatar"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_title_activity"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="125dp">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/user1" />

        <ProgressBar
            android:id="@+id/progressBarImageAvatar"
            style="?android:attr/progressBarStyle"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_photo" />

        <Button
            android:id="@+id/btn_capture_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/take_photo" />
    </LinearLayout>

</LinearLayout>
